--- a/nano/templates/air_alarm.tmpl
+++ b/nano/templates/air_alarm.tmpl
@@ -23,49 +23,49 @@ Used In File(s): /code/game/machinery/alarm.dm
 <div class="statusDisplay">
 	<div class="line">
 		<div class="statusLabel">Pressure:</div>
-		{^{:~string("<div class='statusValue {0}'>{1} kPa</div>",~dangerToClass(air.danger.pressure),~precisionRound(air.pressure,4))}}
+		{^{:helper.string("<div class='statusValue {0}'>{1} kPa</div>",~dangerToClass(air.danger.pressure),~precisionRound(air.pressure,4))}}
 		<div class="statusValue" style="margin-left:5px;">
 		{^{if !locked}}
 			{^{if mode == 3}}
-				{^{:~link("DEACTIVATE PANIC SYPHON",null,{"mode" : 1},null,'linkOn')}}
+				{^{:helper.link("DEACTIVATE PANIC SYPHON",null,{"mode" : 1},null,'linkOn')}}
 			{{else}}
-				{^{:~link("ACTIVATE PANIC SYPHON",null,{"mode" : 3},null,'red')}}
+				{^{:helper.link("ACTIVATE PANIC SYPHON",null,{"mode" : 3},null,'red')}}
 			{{/if}}
 		{{/if}}
 		</div>
 	</div>
 	<div class="line">
 		<div class="statusLabel">Oxygen:</div>
-		{^{:~displayBar(air.contents.oxygen, 0, 100, ~dangerToClass(air.danger.oxygen))}}
-		{^{:~string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.oxygen),~precisionRound(air.contents.oxygen,2))}}
+		{^{:helper.displayBar(air.contents.oxygen, 0, 100, ~dangerToClass(air.danger.oxygen))}}
+		{^{:helper.string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.oxygen),~precisionRound(air.contents.oxygen,2))}}
 	</div>
 	<div class="line">
 		<div class="statusLabel">Nitrogen:</div>
-		{^{:~displayBar(air.contents.nitrogen, 0, 100, ~dangerToClass(air.danger.nitrogen))}}
-		{^{:~string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.nitrogen),~precisionRound(air.contents.nitrogen,2))}}
+		{^{:helper.displayBar(air.contents.nitrogen, 0, 100, ~dangerToClass(air.danger.nitrogen))}}
+		{^{:helper.string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.nitrogen),~precisionRound(air.contents.nitrogen,2))}}
 	</div>
 	<div class="line">
 		<div class="statusLabel">Carbon Dioxide:</div>
-		{^{:~displayBar(air.contents.co2, 0, 100, ~dangerToClass(air.danger.co2))}}
-		{^{:~string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.co2),~precisionRound(air.contents.co2,2))}}
+		{^{:helper.displayBar(air.contents.co2, 0, 100, ~dangerToClass(air.danger.co2))}}
+		{^{:helper.string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.co2),~precisionRound(air.contents.co2,2))}}
 	</div>
 	<div class="line">
 		<div class="statusLabel">Toxins:</div>
-		{^{:~displayBar(air.contents.plasma, 0, 100, ~dangerToClass(air.danger.plasma))}}
-		{^{:~string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.plasma),~precisionRound(air.contents.plasma,2))}}
+		{^{:helper.displayBar(air.contents.plasma, 0, 100, ~dangerToClass(air.danger.plasma))}}
+		{^{:helper.string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.plasma),~precisionRound(air.contents.plasma,2))}}
 	</div>
 	{^{if air.danger.other>0}}
 	<div class="line">
 		<div class="statusLabel">Other:</div>
-		{^{:~displayBar(air.contents.other, 0, 100, ~dangerToClass(air.danger.other))}}
-		{^{:~string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.other),~precisionRound(air.contents.other,2))}}
+		{^{:helper.displayBar(air.contents.other, 0, 100, ~dangerToClass(air.danger.other))}}
+		{^{:helper.string("<div class='statusValue {0}'>{1}%</div>",~dangerToClass(air.danger.other),~precisionRound(air.contents.other,2))}}
 	</div>
 	{{/if}}
 	<div class="line">
 		<div class="statusLabel">
 			Temperature:
 		</div>
-		{^{:~string("<div class='statusValue {0}'>{1}&deg;K ({2}&deg;C)</div>",~dangerToClass(air.danger.temperature),~precisionRound(air.temperature,2),~precisionRound(air.temperature_c,2))}}
+		{^{:helper.string("<div class='statusValue {0}'>{1}&deg;K ({2}&deg;C)</div>",~dangerToClass(air.danger.temperature),~precisionRound(air.temperature,2),~precisionRound(air.temperature_c,2))}}
 	</div>
 	<div class="line">
 		<div class="statusLabel">Local Status:</div>
@@ -82,9 +82,9 @@ Used In File(s): /code/game/machinery/alarm.dm
 		{{/if}}
 		{^{if !locked}}
 			{^{if alarmActivated}}
-				{^{:~link('Reset Alarm',null,{'atmos_reset':1},null,'linkOn')}}
+				{^{:helper.link('Reset Alarm',null,{'atmos_reset':1},null,'linkOn')}}
 			{{else}}
-				{^{:~link('Activate Alarm',null,{'atmos_alarm':1},null,'red')}}
+				{^{:helper.link('Activate Alarm',null,{'atmos_alarm':1},null,'red')}}
 			{{/if}}
 		{{/if}}
 		</div>
@@ -96,13 +96,13 @@ Used In File(s): /code/game/machinery/alarm.dm
 		#define RCON_YES	3
 		-->
 		<div class="statusLabel">Remote Control:</div>
-		{^{:~link('Off',  null, {'rcon' : 1}, (rcon != 1) ? null : 'disabled')}}
-		{^{:~link('Auto', null, {'rcon' : 2}, (rcon != 2) ? null : 'disabled')}}
-		{^{:~link('On',   null, {'rcon' : 3}, (rcon != 3) ? null : 'disabled')}}
+		{^{:helper.link('Off',  null, {'rcon' : 1}, (rcon != 1) ? null : 'disabled')}}
+		{^{:helper.link('Auto', null, {'rcon' : 2}, (rcon != 2) ? null : 'disabled')}}
+		{^{:helper.link('On',   null, {'rcon' : 3}, (rcon != 3) ? null : 'disabled')}}
 	</div>
 	<div class="line">
 		<div class="statusLabel">Thermostat:</div>
-		{^{:~link(target_temp+" C", 'carat-2-n-s', {'temperature': 1})}}
+		{^{:helper.link(target_temp+" C", 'carat-2-n-s', {'temperature': 1})}}
 	</div>
 </div>
 {{/if}}
@@ -114,11 +114,11 @@ Used In File(s): /code/game/machinery/alarm.dm
 	<div class="item">
 		<div class="itemLabel">Screen:</div>
 		<div class="itemContents">
-			{^{:~link('Main',      'gear',{'screen':1},(screen==1)?'linkOn':'')}}
-			{^{:~link('Vents',     'gear',{'screen':2},(screen==2)?'linkOn':'')}}
-			{^{:~link('Scrubbers', 'gear',{'screen':3},(screen==3)?'linkOn':'')}}
-			{^{:~link('Mode',      'gear',{'screen':4},(screen==4)?'linkOn':'')}}
-			{^{:~link('Thresholds','gear',{'screen':5},(screen==5)?'linkOn':'')}}
+			{^{:helper.link('Main',      'gear',{'screen':1},(screen==1)?'linkOn':'')}}
+			{^{:helper.link('Vents',     'gear',{'screen':2},(screen==2)?'linkOn':'')}}
+			{^{:helper.link('Scrubbers', 'gear',{'screen':3},(screen==3)?'linkOn':'')}}
+			{^{:helper.link('Mode',      'gear',{'screen':4},(screen==4)?'linkOn':'')}}
+			{^{:helper.link('Thresholds','gear',{'screen':5},(screen==5)?'linkOn':'')}}
 		</div>
 	</div>
 	{{!-- VENTS --}}
@@ -132,19 +132,19 @@ Used In File(s): /code/game/machinery/alarm.dm
 				<div class="line">
 					<div class="statusLabel">Operating:</div>
 					<div class="statusValue">
-						{^{:~link(power ? 'On':'Off','power',{'id_tag':id_tag,'command':'power','val':power?0:1},null,(power?'linkOn':'red'))}}
+						{^{:helper.link(power ? 'On':'Off','power',{'id_tag':id_tag,'command':'power','val':power?0:1},null,(power?'linkOn':'red'))}}
 						{^{if direction=="siphon"}}
-							{^{:~link('Siphoning','arrowthickstop-1-s',{'id_tag':id_tag,'command':'set_dir','dir':'release'})}}
+							{^{:helper.link('Siphoning','arrowthickstop-1-s',{'id_tag':id_tag,'command':'set_dir','dir':'release'})}}
 						{{else}}
-							{^{:~link('Blowing','arrowthick-1-n',{'id_tag':id_tag,'command':'set_dir','dir':'siphon'})}}
+							{^{:helper.link('Blowing','arrowthick-1-n',{'id_tag':id_tag,'command':'set_dir','dir':'siphon'})}}
 						{{/if}}
 					</div>
 				</div>
 				<div class="line">
 					<div class="statusLabel">Pressure checks:</div>
 					<div class="statusValue">
-						{^{:~link('External','power',{'id_tag':id_tag,'command':'checks','val':~xor(checks,1)},null,(checks & 1 ?'linkOn':'red'))}}
-						{^{:~link('Internal','power',{'id_tag':id_tag,'command':'checks','val':~xor(checks,2)},null,(checks & 2 ?'linkOn':'red'))}}
+						{^{:helper.link('External','power',{'id_tag':id_tag,'command':'checks','val':~xor(checks,1)},null,(checks & 1 ?'linkOn':'red'))}}
+						{^{:helper.link('Internal','power',{'id_tag':id_tag,'command':'checks','val':~xor(checks,2)},null,(checks & 2 ?'linkOn':'red'))}}
 					</div>
 				</div>
 				<div class="line">
@@ -152,8 +152,8 @@ Used In File(s): /code/game/machinery/alarm.dm
 					<div class="statusValue">
 						{^{:~precisionRound(external,4)}} kPa
 					</div>
-					{^{:~link('Set','gear',{'id_tag':id_tag,'command':'set_external_pressure'})}}
-					{^{:~link('Reset','arrowrefresh-1-n',{'id_tag':id_tag,'command':'set_external_pressure','val':101.325},null,'linkOn')}}
+					{^{:helper.link('Set','gear',{'id_tag':id_tag,'command':'set_external_pressure'})}}
+					{^{:helper.link('Reset','arrowrefresh-1-n',{'id_tag':id_tag,'command':'set_external_pressure','val':101.325},null,'linkOn')}}
 				</div>
 			</div>
 		{{else}}
@@ -170,16 +170,16 @@ Used In File(s): /code/game/machinery/alarm.dm
 				<div class="line">
 					<div class="statusLabel">Operating:</div>
 					<div class="statusValue">
-						{^{:~link(power ? 'On':'Off','power',{'id_tag':id_tag,'command':'power','val':power?0:1},null,(power?'linkOn':'red'))}}
+						{^{:helper.link(power ? 'On':'Off','power',{'id_tag':id_tag,'command':'power','val':power?0:1},null,(power?'linkOn':'red'))}}
 					</div>
 				</div>
 				<div class="line">
 					<div class="statusLabel">Type:</div>
 					<div class="statusValue">
 						{^{if scrubbing==0}}
-							{^{:~link('Siphoning','arrowthickstop-1-s',{'id_tag':id_tag,'command':'scrubbing','val':1},null,'red')}}
+							{^{:helper.link('Siphoning','arrowthickstop-1-s',{'id_tag':id_tag,'command':'scrubbing','val':1},null,'red')}}
 						{{else}}
-							{^{:~link('Scrubbing','transferthick-e-w',{'id_tag':id_tag,'command':'scrubbing','val':0},null,'linkOn')}}
+							{^{:helper.link('Scrubbing','transferthick-e-w',{'id_tag':id_tag,'command':'scrubbing','val':0},null,'linkOn')}}
 						{{/if}}
 					</div>
 				</div>
@@ -187,10 +187,10 @@ Used In File(s): /code/game/machinery/alarm.dm
 				<div class="line">
 					<div class="statusLabel">Filtering:</div>
 					<div class="statusValue">
-						{^{:~link('CO<sub>2</sub>',null,{'id_tag':id_tag,'command':'co2_scrub','val':(filter_co2==0?1:0)},null,(filter_co2?'linkOn':''))}}
-						{^{:~link('Plasma',        null,{'id_tag':id_tag,'command':'tox_scrub','val':(filter_tox==0?1:0)},null,(filter_tox?'linkOn':''))}}
-						{^{:~link('N<sub>2</sub>O',null,{'id_tag':id_tag,'command':'n2o_scrub','val':(filter_n2o==0?1:0)},null,(filter_n2o?'linkOn':''))}}
-						{^{:~link('O<sub>2</sub>', null,{'id_tag':id_tag,'command':'o2_scrub', 'val':(filter_o2 ==0?1:0)},null,(filter_o2 ?'linkOn':''))}}
+						{^{:helper.link('CO<sub>2</sub>',null,{'id_tag':id_tag,'command':'co2_scrub','val':(filter_co2==0?1:0)},null,(filter_co2?'linkOn':''))}}
+						{^{:helper.link('Plasma',        null,{'id_tag':id_tag,'command':'tox_scrub','val':(filter_tox==0?1:0)},null,(filter_tox?'linkOn':''))}}
+						{^{:helper.link('N<sub>2</sub>O',null,{'id_tag':id_tag,'command':'n2o_scrub','val':(filter_n2o==0?1:0)},null,(filter_n2o?'linkOn':''))}}
+						{^{:helper.link('O<sub>2</sub>', null,{'id_tag':id_tag,'command':'o2_scrub', 'val':(filter_o2 ==0?1:0)},null,(filter_o2 ?'linkOn':''))}}
 					</div>
 				</div>
 				{{/if}}
@@ -204,7 +204,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 		<div class="statusDisplay">
 			{^{for modes}}
 			<div class="line">
-				<div class="statusLabel">{^{:~link(name,'gear',{'mode':#index+1},null,(#index+1==~root.mode?'linkOn':''))}}</div>
+				<div class="statusLabel">{^{:helper.link(name,'gear',{'mode':#index+1},null,(#index+1==~root.mode?'linkOn':''))}}</div>
 				<div class="statusValue">
 					{^{:desc}}
 				</div>
@@ -216,7 +216,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 		<div class="statusDisplay">
 			{^{for presets}}
 			<div class="line">
-				<div class="statusLabel">{^{:~link(name,'gear',{'preset':#index+1},null,(#index+1==~root.preset?'linkOn':''))}}</div>
+				<div class="statusLabel">{^{:helper.link(name,'gear',{'preset':#index+1},null,(#index+1==~root.preset?'linkOn':''))}}</div>
 				<div class="statusValue">
 					{^{:desc}}
 				</div>
@@ -239,37 +239,37 @@ Used In File(s): /code/game/machinery/alarm.dm
 					<tr>
 						<th>O<sub>2</sub></th>
 						{^{for sensors.oxygen}}
-							<td>{^{:~link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'oxygen','var':#index+1})}}</td>
+							<td>{^{:helper.link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'oxygen','var':#index+1})}}</td>
 						{{/for}}
 					</tr>
 					<tr>
 						<th>N<sub>2</sub></th>
 						{^{for sensors.nitrogen}}
-							<td>{^{:~link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'nitrogen','var':#index+1})}}</td>
+							<td>{^{:helper.link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'nitrogen','var':#index+1})}}</td>
 						{{/for}}
 					</tr>
 					<tr>
 						<th>CO<sub>2</sub></th>
 						{^{for sensors.carbon_dioxide}}
-							<td>{^{:~link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'carbon_dioxide','var':#index+1})}}</td>
+							<td>{^{:helper.link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'carbon_dioxide','var':#index+1})}}</td>
 						{{/for}}
 					</tr>
 					<tr>
 						<th>Toxins</th>
 						{^{for sensors.plasma}}
-							<td>{^{:~link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'plasma','var':#index+1})}}</td>
+							<td>{^{:helper.link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'plasma','var':#index+1})}}</td>
 						{{/for}}
 					</tr>
 					<tr>
 						<th>Pressure</th>
 						{^{for sensors.pressure}}
-							<td>{^{:~link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'pressure','var':#index+1})}}</td>
+							<td>{^{:helper.link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'pressure','var':#index+1})}}</td>
 						{{/for}}
 					</tr>
 					<tr>
 						<th>Temperature (K)</th>
 						{^{for sensors.temperature}}
-							<td>{^{:~link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'temperature','var':#index+1})}}</td>
+							<td>{^{:helper.link(#data >= 0 ? ~precisionRound(#data,4) : "OFF",null,{'command':'set_threshold','env':'temperature','var':#index+1})}}</td>
 						{{/for}}
 					</tr>
 				</tbody>
