Fixed the fucking NanoUI finally

--- a/nano/templates/air_alarm.tmpl
+++ b/nano/templates/air_alarm.tmpl
@@ -2,7 +2,7 @@
 Title: Air Alarm UI
 Used In File(s): /code/game/machinery/alarm.dm
 -->
-{{!--
+<!--
 #define AALARM_MODE_SCRUBBING	1
 #define AALARM_MODE_REPLACEMENT	2 //like scrubbing, but faster.
 #define AALARM_MODE_PANIC		3 //constantly sucks all air
@@ -15,7 +15,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 #define AALARM_SCREEN_SCRUB		3
 #define AALARM_SCREEN_MODE		4
 #define AALARM_SCREEN_SENSORS	5
- --}}
+-->
 <h3>{{:data.name}}</h3>
 {{if !data.air}}
 	<div class="notice">Unable to acquire air sample.</div>
@@ -121,7 +121,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 			{{:helper.link('Thresholds','gear',{'screen':5},(data.screen==5)?'linkOn':'')}}
 		</div>
 	</div>
-	{{!-- VENTS --}}
+	<!-- VENTS -->
 	{{if data.screen == 2}}
 		<h3>Vent Pump Settings</h3>
 		{{for data.vents}}
@@ -159,7 +159,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 		{{empty}}
 			<i>No vent pumps located in this area.</i>
 		{{/for}}
-	{{!-- SCRUBBERS --}}
+	<!-- SCRUBBERS -->
 	{{else data.screen == 3}}
 		<h3>Scrubbers</h3>
 		{{for data.scrubbers}}
@@ -195,10 +195,10 @@ Used In File(s): /code/game/machinery/alarm.dm
 				</div>
 				{{/if}}
 			</div>
-		{{else}}
+		{{empty}}
 			<i>No scrubbers located in this area.</i>
 		{{/for}}
-	{{!-- MODES --}}
+	<!-- MODES -->
 	{{else data.screen == 4}}
 		<h3>System Mode</h3>
 		<div class="statusDisplay">
@@ -223,7 +223,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 			</div>
 			{{/for}}
 		</div>
-	{{!-- SENSORS --}}
+	<!-- SENSORS -->
 	{{else data.screen == 5}}
 		<h3>Sensor Thresholds</h3>
 		<div class="statusDisplay">
