--- a/nano/templates/comm_console.tmpl
+++ b/nano/templates/comm_console.tmpl
@@ -2,49 +2,49 @@
 Title: Communications
 Used In File(s): /code/game/machinery/computers/communications.dm
 -->
-{{!--
+<!--
 #define COMM_SCREEN_MAIN		1
 #define COMM_SCREEN_STAT		2
 #define COMM_SCREEN_MESSAGES	3
 #define COMM_SCREEN_SECLEVEL	4
- --}}
-{{if !authenticated}}
+-->
+{{if !data.authenticated}}
 <div class="notice">Please swipe your ID card. {{:helper.link('Log In','unlocked',{'operation':'login'},null,'fixed')}}</div>
 {{else}}
-	{{if !is_ai}}
+	{{if !data.is_ai}}
 	<div class="notice">Please remember to {{:helper.link('Log Out','locked',{'operation':'logout'},null,'fixed')}}</div>
 	{{/if}}
 	
 	<div class="item">
 		<h3>Emergency Shuttle:</h3>
-		{{if shuttle.eta}}
+		{{if data.shuttle.eta}}
 			<div class="itemLabel">ETA:</div>
 			<div class="itemContents">
-				{{>shuttle.eta}}
+				{{>data.shuttle.eta}}
 			</div>
-		{{/if}}{{!-- SHUTTLE ETA --}}
+		{{/if}}<!-- SHUTTLE ETA -->
 		<div class="itemLabel">Options:</div>
 		<div class="itemContents">
-			{{if shuttle.pos == 0}}
-				{{if shuttle.on && !is_ai}}
+			{{if data.shuttle.pos == 0}}
+				{{if data.shuttle.on && !data.is_ai}}
 					{{:helper.link('Cancel Shuttle','arrowreturnthick-1-w',{'operation':'cancelshuttle'})}}
-				{{else !shuttle.on}}
+				{{else !data.shuttle.on}}
 					{{:helper.link('Call Shuttle','arrowthickstop-1-s',{'operation':'callshuttle'})}}
 				{{/if}}
 			{{/if}}
 		</div>
 	</div>
 
-	{{if screen==1}}
-		{{!-- MAIN SCREEN --}}
+	{{if data.screen==1}}
+		<!-- MAIN SCREEN -->
 		<h3>Menu</h3>
 		<div class="item">
-			{{if authenticated==2}}
+			{{if data.authenticated==2}}
 				<div class="line">
 					{{:helper.link('Make an Announcement','alert',{'operation':'announce'})}}
 				</div>
 				<div class="line">
-				{{if emagged}}
+				{{if data.emagged}}
 					{{:helper.link('Message [UNKNOWN]','mail-closed',{'operation':'MessageSyndicate'})}}
 					</div>
 					<div class="line">
@@ -64,39 +64,39 @@ Used In File(s): /code/game/machinery/computers/communications.dm
 				{{:helper.link('Message List','comment',{'operation':'messagelist'})}}
 			</div>
 		</div>
-	{{else screen==2}}
-		{{!-- STATUS DISPLAYS --}}
+	{{else data.screen==2}}
+		<!-- STATUS DISPLAYS -->
 		<h2>Status Displays</h2>
 		{{:helper.link('Back','home',{'operation':'main'})}}
 		<h3>Presets</h3>
-		{{for stat_display.presets}}
+		{{for data.stat_display.presets}}
 			<div class="line">
-				<div class="statusLabel">{{:helper.link(label,'info',{'operation':'setstat','statdisp':name},null,(name==data.stat_display.type?'linkOn':''))}}</div>
+				<div class="statusLabel">{{:helper.link(data.label,'info',{'operation':'setstat','statdisp':name},null,(name==data.stat_display.type?'linkOn':''))}}</div>
 			</div>
 		{{/for}}
 		<h3>Alerts</h3>
-		{{for stat_display.alerts}}
+		{{for data.stat_display.alerts}}
 			<div class="line">
-				<div class="statusLabel">{{:helper.link(label,'alert',{'operation':'setstat','statdisp':'alert','alert':alert},null,(name==data.stat_display.type?'linkOn':''))}}</div>
+				<div class="statusLabel">{{:helper.link(data.label,'alert',{'operation':'setstat','statdisp':'alert','alert':alert},null,(name==data.stat_display.type?'linkOn':''))}}</div>
 			</div>
 		{{/for}}
 		<h3>Messages</h3>
 		<div class="item">
-			{{if stat_display.type}}
+			{{if data.stat_display.type}}
 			<div class="line">
 				<div class="statusLabel">{{:helper.link('Line 1:','gear',{'operation':'setmsg1'})}}</div>
-				<div class="statusValue">{{>stat_display.line_1}}</div>
+				<div class="statusValue">{{>data.stat_display.line_1}}</div>
 			</div>
 			<div class="line">
 				<div class="statusLabel">{{:helper.link('Line 2:','gear',{'operation':'setmsg2'})}}</div>
-				<div class="statusValue">{{>stat_display.line_2}}</div>
+				<div class="statusValue">{{>data.stat_display.line_2}}</div>
 			</div>
 			{{/if}}
 		</div>
-	{{else screen==3}}
-		{{!-- MESSAGES --}}
+	{{else data.screen==3}}
+		<!-- MESSAGES -->
 		<h3>Messages</h3>
-		{{if current_message}}
+		{{if data.current_message}}
 			{{:helper.link('Messages','home',{'operation':'messagelist'})}}
 			<h3>{{>title}}</h3>
 			<div class="item">
@@ -104,31 +104,31 @@ Used In File(s): /code/game/machinery/computers/communications.dm
 			</div>
 		{{else}}
 			{{:helper.link('Back','home',{'operation':'main'})}}
-			{{for messages}}
+			{{for data.messages}}
 				<div class="line">
-					{{:helper.link('Open','mail-open',{'operation':'messagelist','msgid':id})}}
-					{{:helper.link('Delete','close',{'operation':'delmessage','msgid':id},'red')}}
-					{{>title}}
+					{{:helper.link('Open','mail-open',{'operation':'messagelist','msgid':data.id})}}
+					{{:helper.link('Delete','close',{'operation':'delmessage','msgid':data.id},'red')}}
+					{{>data.title}}
 				</div>
 			{{/for}}
 		{{/if}}
-	{{else screen==4}}
-		{{!-- ALERT LEVEL --}}
+	{{else data.screen==4}}
+		<!-- ALERT LEVEL -->
 		<h3>Security Level</h3>
 		{{:helper.link('Back','home',{'operation':'main'})}}
 		<div class="item">
 			<div class="line">
 				<div class="itemLabel">Security Level:</div>
-				<div class="itemContents">{{>str_security_level}}</div>
+				<div class="itemContents">{{>data.str_security_level}}</div>
 			</div>
 			<div class="line">
 				<div class="itemLabel">Presets:</div>
 				<div class="itemContents">
-					{{for levels}}
-					{{:helper.link(name,'comment',{'operation':'newalertlevel','level':id},null,(id==data.security_level?'linkOn':''))}}
+					{{for data.levels}}
+					{{:helper.link(name,'comment',{'operation':'newalertlevel','level':data.id},null,(data.id==data.security_level?'linkOn':''))}}
 					{{/for}}
 				</div>
 			</div>
 		</div>
-	{{/if}}{{!-- SCREEN --}}
-{{/if}}{{!-- AUTHENTICATED --}}
+	{{/if}}<!-- SCREEN -->
+{{/if}}<!-- AUTHENTICATED -->
