atmos control map, doesn't have clickable alarm overlays just yet. made oxyloss and toxloss easier to read on the nanoui.

--- a/nano/css/shared.css
+++ b/nano/css/shared.css
@@ -543,6 +543,14 @@ th.misc {
     color: green;
 }
 
+.toxin_light {
+    color: #3ADF00;
+}
+
 .oxyloss {
     color: blue;
+}
+
+.oxyloss_light {
+    color: #6698FF;
 }
