--- a/nano/templates/atmos_control.tmpl
+++ b/nano/templates/atmos_control.tmpl
@@ -16,6 +16,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 #define AALARM_SCREEN_MODE		4
 #define AALARM_SCREEN_SENSORS	5
 -->
+{{:helper.link('Show Tracker Map', 'pin-s', {'showMap' : 1})}}
 {{if !data.alarm}}
 	<h3>Atmospherics Control</h3>
 	<div class="statusDisplay">
