--- a/nano/css/icons.css
+++ b/nano/css/icons.css
@@ -241,6 +241,21 @@
     background-image: url(uiIcons16Red.png);
 }
 
+.mapIcon16.bad {
+    background-image: url(uiIcons16Red.png);
+}
+
+.mapIcon16.average {
+    background-image: url(uiIcons16Orange.png);
+}
+
+.mapIcon16.good {
+    background-image: url(uiIcons16Green.png);
+}
+
+/* AirAlarm */
+.mapIcon16.icon-airalarm { background-position: 0 -144px; }
+
 /* Command Positions */
 .mapIcon16.rank-captain {
     background-position: -224px -112px;
