--- a/nano/templates/atmos_control_map_content.tmpl
+++ b/nano/templates/atmos_control_map_content.tmpl
@@ -4,7 +4,7 @@ Used In File(s): \code\workinprogress\mini\atmos_control.dm
  -->
 {{for data.alarms}}
 	{{if value.z == 1}}
-		<div class="mapIcon mapIcon16 icon-airalarm {{:helper.dangerToClass(value.danger)}}" style="left: {{:(value.x)}}px; bottom: {{:(value.y)}}px;" unselectable="on">
+		<div class="linkActive mapIcon mapIcon16 icon-airalarm {{:helper.dangerToClass(value.danger)}}" style="left: {{:(value.x)}}px; bottom: {{:(value.y)}}px;" unselectable="on" data-href="{{:NanoUtility.generateHref({"alarm":value.ID, "showMap":0})}}">
 			<div class="tooltip hidden">
 				{{:value.name}} ({{:helper.dangerToSpan(value.danger)}} {{:value.area}}: {{:value.x}}, {{:value.y}})
 			</div>
