Revert "PDA ID link will no longer overflow with long names/jobs."
This reverts commit 85848b958eb4226f752a1ebb9b04c95da553bab0.

--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -25,36 +25,16 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
 		</div>
 	</div>
 	<br>
-	{{if mode == 0}} <!-- Main Menu -->
-	<div class="item">
-		<div class="itemLabelNarrow">
-			Owner:
-		</div>
-		<div class="itemContent">
-			<span class="average">{{:owner}}, {{:ownjob}}</span>
-		</div>
-	</div>
-	<br>
-	<div class="item">
-		<div class="itemLabelNarrow">
-			ID:
-		</div>
-		<div class="itemContent">
-			 {{:~link(idLink, 'eject', {'choice' : "Authenticate"}, idInserted ? null : 'disabled', idInserted ? 'floatright' : 'fixedLeft')}}
-		</div>
-	</div>
-	<br>
-	<div class="item">
-                <div class="itemLabelNarrow">
-                        <b>Cartridge</b>:
-                </div>
-                <div class="itemContent">
-			{{if cart_loaded==1}}
-                         {{:~link(cartridge.name, 'eject', {'choice' : "Eject"},null,null)}}
-			{{else}}
-			{{:~link('None', 'eject', {'choice' : "Eject"},'disabled',null)}}
-			{{/if}}
-                </div>
+
+
+	{{if data.mode == 0}} <!-- Main Menu -->
+        <div class="item">
+            <div class="itemLabelNarrow">
+                Owner:
+            </div>
+            <div class="itemContent">
+                <span class="average">{{:data.owner}}, {{:data.ownjob}}</span>
+            </div>
         </div>
         <br>
         <div class="item">
