Adds constructable and upgradeable machinery, fixes the RPED, other minor fixes

--- a/nano/templates/telescience_console.tmpl
+++ b/nano/templates/telescience_console.tmpl
@@ -2,6 +2,7 @@
 Title: Telescience Control UI 
 Used In File(s): \code\game\machinery\computer\telescience.dm
 -->
+<h1>Telescience Console</h1>
 <div class="item">
 	<div class="itemLabel">Coordinates:</div>
 	<div class="itemContent">
