Mapfix, dbconfig update, sec camera template network fix

--- a/nano/templates/sec_camera.tmpl
+++ b/nano/templates/sec_camera.tmpl
@@ -21,6 +21,7 @@ Used In File(s): \code\game\machinery\computer\camera.dm
 		{{:helper.link(value.name, '', {'switchTo' : value.camera})}}
 	{{/if}}
 {{/for}}
+{{if data.networks}}
 <div class="item">
 	<h2>Networks</h2>
 	Please select the networks you'd like this console to monitor.
@@ -35,3 +36,4 @@ Used In File(s): \code\game\machinery\computer\camera.dm
 		{{/for}}
 	</div>
 </div>
+{{/if}}
