Updated logo and description. Removed NT logo from UI

--- a/nano/templates/safe.tmpl
+++ b/nano/templates/safe.tmpl
@@ -48,7 +48,7 @@
 		<div style='display: inline-block;'> <img src="safe_dial.png" style='transform: rotate({{:data.rotation}}); z-index: -1;'></div>
 	</div>
 	<div style='text-align: center;'>
-		<div style='font-weight: bold;'>How to open your Nanotrasen Arms - 2 tumbler safe</div> 
+		<div style='font-weight: bold;'>How to open your Scarborough Arms - 2 tumbler safe</div> 
 		<div style='display: inline-block; text-align: left;'>
 			<div>1. Turn the dial to the right past the first number twice</div>
 			<div>2. Stop at the first number</div>
