UI was missed in commit

--- a/nano/templates/safe.tmpl
+++ b/nano/templates/safe.tmpl
@@ -3,6 +3,9 @@
 		body {
 			background: #3E4E69;
 		}
+		#uiTitleFluff {
+			display: none;
+		}
 	</style>
 </head>
 {{if data.open}}
@@ -48,15 +51,15 @@
 		<div style='display: inline-block;'> <img src="safe_dial.png" style='transform: rotate({{:data.rotation}}); z-index: -1;'></div>
 	</div>
 	<div style='text-align: center;'>
-		<div style='font-weight: bold;'>How to open your Scarborough Arms - 2 tumbler safe</div> 
+		<div style='font-weight: bold;'>How to open your Scarborough Arms - 2 tumbler safe.</div> 
 		<div style='display: inline-block; text-align: left;'>
-			<div>1. Turn the dial to the right past the first number twice</div>
-			<div>2. Stop at the first number</div>
-			<div>3. Turn the dial to the left past the second number once</div>
-			<div>4. Stop at the second number</div>
-			<div>5. Turn to the right until the dial stops</div>
-			<div style='height: 32px;'>6. Open the safe</div>
+			<div>1. Turn the dial right two full turns.</div>
+			<div>2. Keep turning right and stop on first number.</div>
+			<div>3. Turn the dial left one full turn.</div>
+			<div>4. Turn left to second number. Do not go past it.</div>
+			<div>5. Turn the dial right until it stops.</div>
+			<div style='height: 32px;'>6. Open the safe.</div>
 		</div>	
-		<div style='font-weight: bold;'>To lock fully, turn the dial to the left for three rotations</div>
+		<div style='font-weight: bold;'>To lock fully, turn the dial to the left for three rotations.</div>
 	</div>
 {{/if}}
