Prettying up the spawner menu a bit

--- a/nano/templates/spawners_menu.tmpl
+++ b/nano/templates/spawners_menu.tmpl
@@ -4,7 +4,8 @@
 		{{for data.spawners}}
 			<div class='item'>
 				<div class='itemLabel'>
-					{{:value.name}}
+					<h3>{{:value.name}}</h3>
+					<p>{{:value.amount_left}} spawners left.</p>
 				</div>
 				<div class='itemContent'>
 					{{:value.desc}}
