Reverting the department colors

--- a/nano/templates/radio_basic.tmpl
+++ b/nano/templates/radio_basic.tmpl
@@ -15,7 +15,7 @@ Used In File(s): /code/game/objects/item/devices/radio/radio.dm
 		.medradio				{color: #009190;}
 		.sciradio				{color: #993399;}
 		.supradio				{color: #7F6539;}
-		.srvradio				{color: #d38106;}
+		.srvradio				{color: #80A000;}
 	</style>
 </head>
 
