nano scroll styling

--- a/nano/styles/_formatting.less
+++ b/nano/styles/_formatting.less
@@ -169,8 +169,8 @@
 
 .titlebutton() {
     color: #E9C183;
-
-    &.hover {
+    
+    &:hover {
         color: lighten(#98b0c3, 10%);
     }
 }
@@ -199,4 +199,6 @@ div.resize {
     border-color: transparent transparent #363636 transparent;
 
     transform: rotate(360deg);
+
+    cursor: nwse-resize;
 }
