--- a/nano/styles/nanoui.less
+++ b/nano/styles/nanoui.less
@@ -20,6 +20,14 @@ body {
         @background-end 100%) no-repeat fixed center/100% 100%;
 }
 
+//nano scrollbar styling
+html,body {
+    scrollbar-face-color:#666666;
+    scrollbar-arrow-color:#E9C183;
+    scrollbar-track-color:#363636;
+    scrollbar-shadow-color:#555555;    
+}
+
 #uiWrapper {
     width: 100%;
     height: 100%;
@@ -28,8 +36,19 @@ body {
 }
 
 #uiTitleWrapper {
-    position: relative;
-    height: 30px;
+    position: fixed;
+    min-height: 30px;
+    min-width: 100%;   
+    background-color: #363636;
+    top: 0px;
+    overflow: hidden;
+    z-index: 100;
+    & > div {
+        cursor: default;
+    }
+    & > i {
+        cursor: default;
+    }
 }
 
 #uiTitleText {
@@ -66,6 +85,7 @@ body {
 #uiMapWrapper {
     clear: both;
     padding: 8px;
+    margin-top: 30px;
 }
 
 #uiMapHeader {
@@ -117,6 +137,7 @@ body {
 #uiContent {
     clear: both;
     padding: 8px;
+    margin-top: 30px;
 }
 
 #uiMapTooltip {
