Fixed title buttons showing up

--- a/nano/styles/_formatting.less
+++ b/nano/styles/_formatting.less
@@ -167,6 +167,10 @@
     display: none;
 }
 
+i.fancy {
+    display: none;
+}
+
 .titlebutton() {
     color: #E9C183;
     // Since we're on some hilariously outdated libraries, the below is an issue
