Dark theme + taskbar

--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -10,7 +10,7 @@ html, body {
 	color: #000000;
 }
 body {
-	background: #fff;
+	background: #C0C0C0;
     font-family: Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 9pt;
     line-height: 1.2;
